--- a/tools/pdf-splitter.html
+++ b/tools/pdf-splitter.html
@@ -3,23 +3,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PDF Splitter | Ultimatix</title>
-  <link rel="stylesheet" href="css/style.css" />
-  <script src="/script.js" defer></script>
+  <title>PDF Splitter | Ultimatrix</title>
+  <link rel="stylesheet" href="/css/style.css" />
+  <script src="/js/script.js"></script>
 </head>
 <body>
-  
-  <header class="site-header">
-    <div class="container">
-      <h1 class="logo">Ultimatix</h1>
+  <header>
+    <div class="header-container">
+      <h1><a href="/index.html" style="text-decoration:none;color:inherit;">Ultimatrix: The Ultimate World</a></h1>
       <nav>
-        <a href="/">Home</a>
-        <a href="/blog">Blog</a>
-        <a href="/tools">Tools</a>
-        <a href="/games">Games</a>
-        <button id="theme-toggle">🌓</button>
+        <ul>
+          <li><a href="/games/games.html">Games</a></li>
+          <li><a href="/news/news.html">News</a></li>
+          <li><a href="/blogs/blogs.html">Blogs</a></li>
+          <li><a href="/tools/tools.html">Tools</a></li>
+        </ul>
       </nav>
-      <input type="text" placeholder="Search..." class="search-bar" />
+      <button class="dark-toggle" onclick="toggleDarkMode()">🌓</button>
     </div>
   </header>
 
