--- a/games/2048.html
+++ b/games/2048.html
@@ -5,15 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>2048 Game - Play Online Free | Ultimatrix</title>
   <meta name="description" content="Play the classic 2048 game online for free on Ultimatrix! Merge tiles, increase your score, and challenge your brain. Use arrow keys to move. No download needed." />
+  <link rel="stylesheet" href="/css/style.css" />
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
       background: linear-gradient(to right, #ece9e6, #ffffff);
-      height: 100vh;
+      /* Remove flex centering from body */
+    }
+    .game-wrapper {
       display: flex;
       justify-content: center;
       align-items: center;
+      min-height: 80vh;
+      margin-top: 80px;
     }
     .game-container {
       text-align: center;
@@ -45,26 +50,35 @@
       font-size: 1rem;
       font-weight: bold;
     }
+    /* Place side-buttons at the bottom and make them eye-catching */
     .side-buttons {
-      position: fixed;
-      top: 50%;
-      transform: translateY(-50%);
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
+      gap: 20px;
+      margin: 30px auto 20px auto;
+      position: relative;
       width: 100%;
-      padding: 0 30px;
-      z-index: 10;
-      pointer-events: none;
+      z-index: 1;
+      pointer-events: auto;
     }
     .side-buttons a {
-      background-color: rgba(255, 255, 255, 0.9);
-      color: #333;
+      background: linear-gradient(90deg, #6dd5ed 0%, #2193b0 100%);
+      color: #fff;
       text-decoration: none;
-      padding: 8px 14px;
-      border-radius: 8px;
-      font-size: 0.9rem;
-      border: 1px solid #ccc;
-      pointer-events: all;
+      padding: 14px 28px;
+      border-radius: 30px;
+      font-size: 1.1rem;
+      font-weight: bold;
+      box-shadow: 0 4px 12px rgba(33, 147, 176, 0.15);
+      border: none;
+      transition: transform 0.2s, box-shadow 0.2s;
+      display: inline-block;
+    }
+    .side-buttons a:hover {
+      transform: scale(1.07);
+      box-shadow: 0 6px 18px rgba(33, 147, 176, 0.25);
+      background: linear-gradient(90deg, #2193b0 0%, #6dd5ed 100%);
+      color: #fff;
     }
     .grid {
       display: grid;
@@ -107,14 +121,84 @@
       font-size: 0.9rem;
       color: #666;
     }
+    .game-description, .game-rules {
+      background: #f8f9fa;
+      border-radius: 10px;
+      padding: 15px 18px;
+      margin-top: 18px;
+      font-size: 1rem;
+      color: #333;
+      text-align: left;
+    }
+    .game-description strong, .game-rules strong {
+      display: block;
+      margin-bottom: 6px;
+      color: #2193b0;
+    }
+
+    /* Place side-buttons at the bottom and make them eye-catching */
+    .side-buttons {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 30px;
+      margin-bottom: 20px;
+      position: relative;
+      width: 100%;
+      z-index: 1;
+    }
+    .side-buttons a {
+      background: linear-gradient(90deg, #6dd5ed 0%, #2193b0 100%);
+      color: #fff;
+      text-decoration: none;
+      padding: 14px 28px;
+      border-radius: 30px;
+      font-size: 1.1rem;
+      font-weight: bold;
+      box-shadow: 0 4px 12px rgba(33, 147, 176, 0.15);
+      border: none;
+      transition: transform 0.2s, box-shadow 0.2s;
+      display: inline-block;
+    }
+    .side-buttons a:hover {
+      transform: scale(1.07);
+      box-shadow: 0 6px 18px rgba(33, 147, 176, 0.25);
+      background: linear-gradient(90deg, #2193b0 0%, #6dd5ed 100%);
+      color: #fff;
+    }
+    @media (max-width: 600px) {
+      .side-buttons {
+        flex-direction: column;
+        align-items: center;
+        gap: 12px;
+        margin: 20px auto 10px auto;
+      }
+      .side-buttons a {
+        width: 90vw;
+        font-size: 1rem;
+        text-align: center;
+        padding: 12px 0;
+      }
+    }
   </style>
 </head>
 <body>
-  <div class="side-buttons">
-    <a href="/../index.html">⬅ Back to Ultimatrix</a>
-    <a href="/games/games.html">Explore Other Games ➡</a>
-  </div>
-  <div class="game-container" tabindex="0" onkeydown="handleKey(event)">
+  <header>
+    <div class="header-container">
+      <h1><a href="/index.html" style="text-decoration:none;color:inherit;">Ultimatrix: The Ultimate World</a></h1>
+      <nav>
+        <ul>
+          <li><a href="/games/games.html">Games</a></li>
+          <li><a href="/news/news.html">News</a></li>
+          <li><a href="/blogs/blogs.html">Blogs</a></li>
+          <li><a href="/tools/tools.html">Tools</a></li>
+        </ul>
+      </nav>
+      <button class="dark-toggle" onclick="toggleDarkMode()">🌓</button>
+    </div>
+  </header>
+  <div class="game-wrapper">
+    <div class="game-container" tabindex="0" onkeydown="handleKey(event)">
     <div class="title">2048</div>
     <div class="score-board">
       <div class="score-box">Score: <span id="score">0</span></div>
@@ -127,6 +211,21 @@
     <div class="instructions">
       Use arrow keys (↑ ↓ ← →) on your keyboard to move the tiles. Merge matching tiles to reach 2048!
     </div>
+    <div class="game-description">
+      <strong>About 2048</strong>
+      <p>
+        Play the addictive <b>2048 game</b> online for free! Slide numbered tiles on a 4x4 grid to combine them and create the 2048 tile. This brain-teasing puzzle game is perfect for sharpening your logic and strategy skills. Enjoy a relaxing, ad-free experience right in your browser.
+      </p>
+    </div>
+    <div class="game-rules">
+      <strong>How to Play:</strong>
+      <ul>
+        <li>Use your arrow keys to move all tiles in the chosen direction.</li>
+        <li>When two tiles with the same number touch, they merge into one with double the value.</li>
+        <li>Keep combining tiles to reach 2048. The game ends when no moves are left.</li>
+      </ul>
+    </div>
+  </div>
   </div>
   <script>
     const gridElement = document.getElementById("grid");
@@ -225,14 +324,41 @@
       if (dir === "right") return "right";
     }
 
+    // Prevent arrow key scrolling and handle moves
     function handleKey(e) {
-      switch (e.key) {
-        case "ArrowUp": move("up"); break;
-        case "ArrowDown": move("down"); break;
-        case "ArrowLeft": move("left"); break;
-        case "ArrowRight": move("right"); break;
+      if (["ArrowUp", "ArrowDown", "ArrowLeft", "ArrowRight"].includes(e.key)) {
+        e.preventDefault();
+        switch (e.key) {
+          case "ArrowUp": move("up"); break;
+          case "ArrowDown": move("down"); break;
+          case "ArrowLeft": move("left"); break;
+          case "ArrowRight": move("right"); break;
+        }
       }
     }
+    document.addEventListener("keydown", handleKey, { passive: false });
+
+    // Swipe support for mobile
+    let touchStartX = 0, touchStartY = 0;
+    gridElement.addEventListener("touchstart", function(e) {
+      if (e.touches.length === 1) {
+        touchStartX = e.touches[0].clientX;
+        touchStartY = e.touches[0].clientY;
+      }
+    }, { passive: true });
+    gridElement.addEventListener("touchend", function(e) {
+      if (e.changedTouches.length === 1) {
+        const dx = e.changedTouches[0].clientX - touchStartX;
+        const dy = e.changedTouches[0].clientY - touchStartY;
+        if (Math.abs(dx) > Math.abs(dy)) {
+          if (dx > 30) move("right");
+          else if (dx < -30) move("left");
+        } else {
+          if (dy > 30) move("down");
+          else if (dy < -30) move("up");
+        }
+      }
+    });
 
     startGame();
     document.querySelector('.game-container').focus();
