--- a/games/number-guessing.html
+++ b/games/number-guessing.html
@@ -6,14 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Number Guessing</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/css/style.css" />
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: Arial, sans-serif;
       background: linear-gradient(to right, #74ebd5, #acb6e5);
       min-height: 100vh;
+    }
+    .game-wrapper {
       display: flex;
-      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      min-height: 80vh;
+      margin-top: 80px;
     }
     .side-buttons {
       position: absolute;
@@ -48,13 +54,40 @@
       font-weight: bold;
       margin-bottom: 20px;
     }
+    .game-description, .game-rules {
+      background: #f8f9fa;
+      border-radius: 10px;
+      padding: 15px 18px;
+      margin-top: 18px;
+      font-size: 1rem;
+      color: #333;
+      text-align: left;
+    }
+    .game-description strong, .game-rules strong {
+      display: block;
+      margin-bottom: 6px;
+      color: #2193b0;
+    }
   </style>
 </head>
 <body>
-  <div class="game-container">
+  <header>
+    <div class="header-container">
+      <h1><a href="/index.html" style="text-decoration:none;color:inherit;">Ultimatrix: The Ultimate World</a></h1>
+      <nav>
+        <ul>
+          <li><a href="/games/games.html">Games</a></li>
+          <li><a href="/news/news.html">News</a></li>
+          <li><a href="/blogs/blogs.html">Blogs</a></li>
+          <li><a href="/tools/tools.html">Tools</a></li>
+        </ul>
+      </nav>
+      <button class="dark-toggle" onclick="toggleDarkMode()">🌓</button>
+    </div>
+  </header>
+  <div class="game-wrapper">
     <div class="side-buttons">
-      <a href="/../index.html" class="btn btn-outline-dark btn-sm">⬅ Back to Ultimatrix</a>
-      <a href="/games/games.html" class="btn btn-primary btn-sm">Explore Other Games ➡</a>
+      
     </div>
     <div class="game-box">
       <div class="title">Number Guessing</div>
@@ -64,6 +97,20 @@
         <button onclick="checkGuess()" class="btn btn-primary mt-2">Submit</button>
       </div>
       <div id="feedback"></div>
+      <div class="game-description">
+        <strong>About Number Guessing</strong>
+        <p>
+          Play the <b>Number Guessing</b> game online! Try to guess the secret number between 1 and 100. This simple and fun game is perfect for practicing logic, deduction, and number sense. Great for kids and adults alike!
+        </p>
+      </div>
+      <div class="game-rules">
+        <strong>How to Play:</strong>
+        <ul>
+          <li>Enter your guess in the input box and click Submit.</li>
+          <li>The game will tell you if your guess is too high, too low, or correct.</li>
+          <li>Keep guessing until you find the secret number!</li>
+        </ul>
+      </div>
       <script>
         const secret = Math.floor(Math.random() * 100) + 1;
         function checkGuess() {
