--- a/games/typing-speed-test.html
+++ b/games/typing-speed-test.html
@@ -6,14 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Typing Speed Test</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/css/style.css" />
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: Arial, sans-serif;
       background: linear-gradient(to right, #74ebd5, #acb6e5);
       min-height: 100vh;
+    }
+    .game-wrapper {
       display: flex;
-      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      min-height: 80vh;
+      margin-top: 80px;
     }
     .side-buttons {
       position: absolute;
@@ -48,13 +54,40 @@
       font-weight: bold;
       margin-bottom: 20px;
     }
+    .game-description, .game-rules {
+      background: #f8f9fa;
+      border-radius: 10px;
+      padding: 15px 18px;
+      margin-top: 18px;
+      font-size: 1rem;
+      color: #333;
+      text-align: left;
+    }
+    .game-description strong, .game-rules strong {
+      display: block;
+      margin-bottom: 6px;
+      color: #2193b0;
+    }
   </style>
 </head>
 <body>
-  <div class="game-container">
+  <header>
+    <div class="header-container">
+      <h1><a href="/index.html" style="text-decoration:none;color:inherit;">Ultimatrix: The Ultimate World</a></h1>
+      <nav>
+        <ul>
+          <li><a href="/games/games.html">Games</a></li>
+          <li><a href="/news/news.html">News</a></li>
+          <li><a href="/blogs/blogs.html">Blogs</a></li>
+          <li><a href="/tools/tools.html">Tools</a></li>
+        </ul>
+      </nav>
+      <button class="dark-toggle" onclick="toggleDarkMode()">🌓</button>
+    </div>
+  </header>
+  <div class="game-wrapper">
     <div class="side-buttons">
-      <a href="/../index.html" class="btn btn-outline-dark btn-sm">⬅ Back to Ultimatrix</a>
-      <a href="/games/games.html" class="btn btn-primary btn-sm">Explore Other Games ➡</a>
+      
     </div>
     <div class="game-box">
       <div class="title">Typing Speed Test</div>
@@ -62,6 +95,20 @@
       <div id="word" class="mb-3 fs-4 fw-bold"></div>
       <input id="input" class="form-control" placeholder="Type the word..." />
       <div class="mt-2">Time: <span id="time">0</span>s</div>
+      <div class="game-description">
+        <strong>About Typing Speed Test</strong>
+        <p>
+          Take the <b>Typing Speed Test</b> online! Type the words as fast and accurately as you can. This game helps improve your typing speed, accuracy, and focus. Perfect for students, professionals, and anyone looking to boost their keyboard skills.
+        </p>
+      </div>
+      <div class="game-rules">
+        <strong>How to Play:</strong>
+        <ul>
+          <li>Type the word shown in the box as quickly as possible.</li>
+          <li>When you type the word correctly, a new word appears and your time is recorded.</li>
+          <li>Try to improve your speed and accuracy with each round!</li>
+        </ul>
+      </div>
       <script>
         const words = ['apple','banana','carrot','dragon','energy','fruit','giant','hello','idea'];
         const wordEl = document.getElementById('word');
