--- a/games/whack-a-mole.html
+++ b/games/whack-a-mole.html
@@ -6,24 +6,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Whack a Mole</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/css/style.css" />
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: Arial, sans-serif;
       background: linear-gradient(to right, #74ebd5, #acb6e5);
       min-height: 100vh;
-      display: flex;
-      flex-direction: column;
     }
-    .side-buttons {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
+    .game-wrapper {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 80vh;
+      margin-top: 80px;
+    }
+    .footer-buttons {
       display: flex;
       justify-content: space-between;
-      width: 100%;
-      padding: 0 20px;
-      z-index: 10;
+      margin-top: 25px;
+      flex-wrap: wrap;
+      gap: 10px;
     }
     .game-container {
       flex: 1;
@@ -48,14 +51,38 @@
       font-weight: bold;
       margin-bottom: 20px;
     }
+    .game-description, .game-rules {
+      background: #f8f9fa;
+      border-radius: 10px;
+      padding: 15px 18px;
+      margin-top: 18px;
+      font-size: 1rem;
+      color: #333;
+      text-align: left;
+    }
+    .game-description strong, .game-rules strong {
+      display: block;
+      margin-bottom: 6px;
+      color: #2193b0;
+    }
   </style>
 </head>
 <body>
-  <div class="game-container">
-    <div class="side-buttons">
-      <a href="/../index.html" class="btn btn-outline-dark btn-sm">⬅ Back to Ultimatrix</a>
-      <a href="/games/games.html" class="btn btn-primary btn-sm">Explore Other Games ➡</a>
+  <header>
+    <div class="header-container">
+      <h1><a href="/index.html" style="text-decoration:none;color:inherit;">Ultimatrix: The Ultimate World</a></h1>
+      <nav>
+        <ul>
+          <li><a href="/games/games.html">Games</a></li>
+          <li><a href="/news/news.html">News</a></li>
+          <li><a href="/blogs/blogs.html">Blogs</a></li>
+          <li><a href="/tools/tools.html">Tools</a></li>
+        </ul>
+      </nav>
+      <button class="dark-toggle" onclick="toggleDarkMode()">🌓</button>
     </div>
+  </header>
+  <div class="game-wrapper">
     <div class="game-box">
       <div class="title">Whack a Mole</div>
 
@@ -65,6 +92,22 @@
       </style>
       <div class="grid" id="grid"></div>
       <div class="mt-3">Score: <span id="score">0</span></div>
+      <div class="footer-buttons mt-4">
+      </div>
+      <div class="game-description">
+        <strong>About Whack-a-Mole</strong>
+        <p>
+          Play <b>Whack-a-Mole</b> online for free! Test your reflexes and reaction speed by hitting the moles as they pop up. This classic arcade game is fun, fast-paced, and perfect for a quick break.
+        </p>
+      </div>
+      <div class="game-rules">
+        <strong>How to Play:</strong>
+        <ul>
+          <li>Click on the moles as soon as they appear in the holes.</li>
+          <li>Each successful hit increases your score.</li>
+          <li>Try to get the highest score before time runs out!</li>
+        </ul>
+      </div>
       <script>
         const grid = document.getElementById('grid');
         const scoreEl = document.getElementById('score');
@@ -74,7 +117,7 @@
         function drawGrid() {
           while (grid.firstChild) {
             grid.removeChild(grid.firstChild);
-      }
+          }
           for (let i = 0; i < 9; i++) {
             const hole = document.createElement('div');
             hole.className = 'hole';
@@ -97,7 +140,6 @@
         setInterval(moveMole, 1000);
         drawGrid();
       </script>
-    
     </div>
   </div>
 </body>
