--- a/games/xo.html
+++ b/games/xo.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tic Tac Toe (XO Game)</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/css/style.css" />
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: linear-gradient(to right, #74ebd5, #acb6e5);
       min-height: 100vh;
-      display: flex;
-      flex-direction: column;
+      /* Remove flex centering from body */
     }
     .side-buttons {
       position: absolute;
@@ -23,6 +23,13 @@
       width: 100%;
       padding: 0 20px;
       z-index: 10;
+    }
+    .game-wrapper {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 80vh;
+      margin-top: 80px;
     }
     .game-container {
       flex: 1;
@@ -76,13 +83,39 @@
     .restart {
       margin-top: 15px;
     }
+    .game-description, .game-rules {
+      background: #f8f9fa;
+      border-radius: 10px;
+      padding: 15px 18px;
+      margin-top: 18px;
+      font-size: 1rem;
+      color: #333;
+      text-align: left;
+    }
+    .game-description strong, .game-rules strong {
+      display: block;
+      margin-bottom: 6px;
+      color: #2193b0;
+    }
   </style>
 </head>
 <body>
-  <div class="game-container">
+  <header>
+    <div class="header-container">
+      <h1><a href="/index.html" style="text-decoration:none;color:inherit;">Ultimatrix: The Ultimate World</a></h1>
+      <nav>
+        <ul>
+          <li><a href="/games/games.html">Games</a></li>
+          <li><a href="/news/news.html">News</a></li>
+          <li><a href="/blogs/blogs.html">Blogs</a></li>
+          <li><a href="/tools/tools.html">Tools</a></li>
+        </ul>
+      </nav>
+      <button class="dark-toggle" onclick="toggleDarkMode()">🌓</button>
+    </div>
+  </header>
+  <div class="game-wrapper">
     <div class="side-buttons">
-      <a href="/../index.html" class="btn btn-outline-dark btn-sm">⬅ Back to Ultimatrix</a>
-      <a href="/games/games.html" class="btn btn-primary btn-sm">Explore Other Games ➡</a>
     </div>
 
     <div class="game-box">
@@ -90,6 +123,20 @@
       <div class="board" id="board"></div>
       <div class="message" id="message"></div>
       <button class="btn btn-success restart" onclick="startGame()">Restart Game</button>
+      <div class="game-description">
+        <strong>About Tic Tac Toe</strong>
+        <p>
+          Play <b>Tic Tac Toe</b> (XO Game) online! Challenge a friend or the computer in this classic strategy game. Perfect for quick fun, sharpening your logic, and learning to think ahead.
+        </p>
+      </div>
+      <div class="game-rules">
+        <strong>How to Play:</strong>
+        <ul>
+          <li>Players take turns placing X or O on the 3x3 grid.</li>
+          <li>The first to get three in a row (horizontally, vertically, or diagonally) wins.</li>
+          <li>If all cells are filled and no one wins, it's a draw.</li>
+        </ul>
+      </div>
     </div>
   </div>
 
