--- a/tools/age-calculator.html
+++ b/tools/age-calculator.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Age Calculator – Calculate Your Age from Date of Birth</title>
+  <title>Age Calculator | Ultimatrix</title>
   <meta name="description" content="Free online age calculator that helps you find your exact age in years, months, and days from your date of birth. Simple and fast." />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="/css/style.css" />
+  <script src="/js/script.js"></script>
   <style>
     body {
       margin: 0;
@@ -79,18 +81,60 @@
       color: #666;
       margin-top: 15px;
     }
+
+    .tool-description, .tool-howto {
+      background: #f8f9fa;
+      border-radius: 10px;
+      padding: 15px 18px;
+      margin-top: 18px;
+      font-size: 1rem;
+      color: #333;
+      text-align: left;
+    }
+    .tool-description strong, .tool-howto strong {
+      display: block;
+      margin-bottom: 6px;
+      color: #2193b0;
+    }
   </style>
 </head>
 <body>
+  <header>
+    <div class="header-container">
+      <h1><a href="/index.html" style="text-decoration:none;color:inherit;">Ultimatrix: The Ultimate World</a></h1>
+      <nav>
+        <ul>
+          <li><a href="/games/games.html">Games</a></li>
+          <li><a href="/news/news.html">News</a></li>
+          <li><a href="/blogs/blogs.html">Blogs</a></li>
+          <li><a href="/tools/tools.html">Tools</a></li>
+        </ul>
+      </nav>
+      <button class="dark-toggle" onclick="toggleDarkMode()">🌓</button>
+    </div>
+  </header>
   <div class="tool-container">
     <div class="side-buttons">
-      <a href="/../index.html" class="btn btn-outline-dark btn-sm">⬅ Back to Ultimatrix</a>
-      <a href="/tools/tools.html" class="btn btn-primary btn-sm">Explore Other Tools ➡</a>
+      
     </div>
 
     <div class="tool-box">
       <div class="title">Age Calculator</div>
       <div class="intro">Select your birth date to calculate your exact age in years, months, and days.</div>
+      <div class="tool-description">
+        <strong>About Age Calculator</strong>
+        <p>
+          Calculate your exact age in years, months, and days with this free <b>Age Calculator</b>. Perfect for birthdays, anniversaries, or official forms.
+        </p>
+      </div>
+      <div class="tool-howto">
+        <strong>How to Use:</strong>
+        <ul>
+          <li>Select your birth date from the dropdowns.</li>
+          <li>Your age will be calculated instantly below.</li>
+          <li>No data is stored or sent—fully private.</li>
+        </ul>
+      </div>
 
       <div>
         <select id="yearSelect"></select>
