--- a/tools/case-convertor.html
+++ b/tools/case-convertor.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Case Converter – Change Text Case Instantly</title>
+  <title>Case Convertor | Ultimatrix</title>
   <meta name="description" content="Free online case converter tool to change text to uppercase, lowercase, sentence case, title case, and capitalized case. Fast and easy!" />
+  <link rel="stylesheet" href="/css/style.css" />
+  <script src="/js/script.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     body {
@@ -89,18 +91,75 @@
       margin-top: 15px;
       text-align: center;
     }
+
+    .tool-description, .tool-howto {
+      background: #f8f9fa;
+      border-radius: 10px;
+      padding: 15px 18px;
+      margin-top: 18px;
+      font-size: 1rem;
+      color: #333;
+      text-align: left;
+    }
+    .tool-description strong, .tool-howto strong {
+      display: block;
+      margin-bottom: 6px;
+      color: #2193b0;
+    }
+    .case-btn {
+      background: linear-gradient(90deg, #9bcaf9 0%, #5a5e5f 100%);
+      color: #151414;
+      border: none;
+      border-radius: 6px;
+      padding: 10px 18px;
+      margin: 0 4px 10px 0;
+      font-size: 1rem;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background 0.2s, color 0.2s;
+    }
+    .case-btn:hover {
+      background: linear-gradient(90deg, #6dd5ed 0%, #1e1e1f 100%);
+      color: #fff;
+    }
   </style>
 </head>
 <body>
+  <header>
+    <div class="header-container">
+      <h1><a href="/index.html" style="text-decoration:none;color:inherit;">Ultimatrix: The Ultimate World</a></h1>
+      <nav>
+        <ul>
+          <li><a href="/games/games.html">Games</a></li>
+          <li><a href="/news/news.html">News</a></li>
+          <li><a href="/blogs/blogs.html">Blogs</a></li>
+          <li><a href="/tools/tools.html">Tools</a></li>
+        </ul>
+      </nav>
+      <button class="dark-toggle" onclick="toggleDarkMode()">🌓</button>
+    </div>
+  </header>
   <div class="tool-container">
     <div class="side-buttons">
-     <a href="/../index.html" class="btn btn-outline-dark btn-sm">⬅ Back to Ultimatrix</a>
-      <a href="/tools/tools.html" class="btn btn-primary btn-sm">Explore Other Tools ➡</a>
     </div>
 
     <div class="tool-box">
       <div class="title">Case Converter</div>
       <div class="intro">Convert your text into different cases instantly. Choose from uppercase, lowercase, capitalized, title, or sentence case.</div>
+      <div class="tool-description">
+        <strong>About Case Convertor</strong>
+        <p>
+          Instantly change your text to <b>uppercase, lowercase, title case, sentence case, or capitalized case</b> with this free online Case Convertor. Great for formatting essays, code, or social media posts. Fast, private, and works in your browser.
+        </p>
+      </div>
+      <div class="tool-howto">
+        <strong>How to Use:</strong>
+        <ul>
+          <li>Paste or type your text in the box above.</li>
+          <li>Click a button to convert to your desired case.</li>
+          <li>Copy the result with one click.</li>
+        </ul>
+      </div>
 
       <textarea id="textInput" placeholder="Paste or type your text here..."></textarea>
 
