--- a/tools/clock.html
+++ b/tools/clock.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Live Clock – Minimal, Immersive</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Clock | Ultimatrix</title>
+  <link rel="stylesheet" href="/css/style.css" />
+  <script src="/js/script.js"></script>
   <meta name="description" content="Beautiful fullscreen clock with ambient Unsplash background, dim toggle, fullscreen, ambient sound, and millisecond time updates." />
   <style>
     html, body {
@@ -134,6 +136,20 @@
   </style>
 </head>
 <body>
+  <header>
+    <div class="header-container">
+      <h1><a href="/index.html" style="text-decoration:none;color:inherit;">Ultimatrix: The Ultimate World</a></h1>
+      <nav>
+        <ul>
+          <li><a href="/games/games.html">Games</a></li>
+          <li><a href="/news/news.html">News</a></li>
+          <li><a href="/blogs/blogs.html">Blogs</a></li>
+          <li><a href="/tools/tools.html">Tools</a></li>
+        </ul>
+      </nav>
+      <button class="dark-toggle" onclick="toggleDarkMode()">🌓</button>
+    </div>
+  </header>
   <div class="overlay" id="overlay"></div>
 
   <div class="container">
@@ -150,8 +166,6 @@
       <button class="control ctrl-bottom-right" id="bgBtn" title="New Background">🌄</button>
     </div>
   </div>
-
-  <button class="back-button" onclick="location.href='/../index.html'">⬅ Back to Ultimatrix</button>
 
   <audio id="ambient" src="https://cdn.pixabay.com/audio/2023/01/16/audio_c00a78b3b4.mp3" loop></audio>
 
