--- a/tools/date-adder.html
+++ b/tools/date-adder.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Add or Subtract Days & Time – Date Time Calculator</title>
+  <title>Date Adder | Ultimatrix</title>
   <meta name="description" content="Add or subtract days, hours, and minutes from a selected date and time. Get the exact future or past datetime instantly." />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="/css/style.css" />
+  <script src="/js/script.js"></script>
   <style>
     body {
       margin: 0;
@@ -56,6 +58,21 @@
       font-size: 1rem;
       color: #444;
       margin-bottom: 20px;
+    }
+
+    .tool-description, .tool-howto {
+      background: #f8f9fa;
+      border-radius: 10px;
+      padding: 15px 18px;
+      margin-top: 18px;
+      font-size: 1rem;
+      color: #333;
+      text-align: left;
+    }
+    .tool-description strong, .tool-howto strong {
+      display: block;
+      margin-bottom: 6px;
+      color: #2193b0;
     }
 
     input[type="date"],
@@ -114,16 +131,42 @@
   </style>
 </head>
 <body>
+  <header>
+    <div class="header-container">
+      <h1><a href="/index.html" style="text-decoration:none;color:inherit;">Ultimatrix: The Ultimate World</a></h1>
+      <nav>
+        <ul>
+          <li><a href="/games/games.html">Games</a></li>
+          <li><a href="/news/news.html">News</a></li>
+          <li><a href="/blogs/blogs.html">Blogs</a></li>
+          <li><a href="/tools/tools.html">Tools</a></li>
+        </ul>
+      </nav>
+      <button class="dark-toggle" onclick="toggleDarkMode()">🌓</button>
+    </div>
+  </header>
 
   <div class="side-buttons">
-    <a href="/../index.html" class="btn btn-outline-dark btn-sm">⬅ Back to Ultimatrix</a>
-    <a href="/tools/tools.html" class="btn btn-primary btn-sm">Explore More ➡</a>
   </div>
 
   <div class="tool-container">
     <div class="tool-box">
       <div class="title">Add or Subtract Date & Time</div>
       <div class="intro">Select a date & time, enter how much to add or subtract, and get the new result instantly.</div>
+      <div class="tool-description">
+        <strong>About Date Adder</strong>
+        <p>
+          Add or subtract days, hours, and minutes from any date and time with this free <b>Date Adder</b> tool. Instantly calculate future or past dates for planning, scheduling, or deadlines.
+        </p>
+      </div>
+      <div class="tool-howto">
+        <strong>How to Use:</strong>
+        <ul>
+          <li>Select a base date and time.</li>
+          <li>Enter the number of days, hours, or minutes to add or subtract.</li>
+          <li>See the new date and time calculated instantly below.</li>
+        </ul>
+      </div>
 
       <input type="date" id="baseDate" />
       <input type="time" id="baseTime" />
