--- a/tools/date-duration.html
+++ b/tools/date-duration.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Date Duration Calculator – Days Between Two Dates</title>
+  <title>Date Duration | Ultimatrix</title>
   <meta name="description" content="Calculate how many days, weeks, or years are between two dates. Simple and accurate date duration calculator with instant results." />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="/css/style.css" />
+  <script src="/js/script.js"></script>
   <style>
     body {
       margin: 0;
@@ -45,6 +47,21 @@
       font-size: 1rem;
       color: #444;
       margin-bottom: 20px;
+    }
+
+    .tool-description, .tool-howto {
+      background: #f8f9fa;
+      border-radius: 10px;
+      padding: 15px 18px;
+      margin-top: 18px;
+      font-size: 1rem;
+      color: #333;
+      text-align: left;
+    }
+    .tool-description strong, .tool-howto strong {
+      display: block;
+      margin-bottom: 6px;
+      color: #2193b0;
     }
 
     input[type="date"] {
@@ -99,11 +116,39 @@
   </style>
 </head>
 <body>
+  <header>
+    <div class="header-container">
+      <h1><a href="/index.html" style="text-decoration:none;color:inherit;">Ultimatrix: The Ultimate World</a></h1>
+      <nav>
+        <ul>
+          <li><a href="/games/games.html">Games</a></li>
+          <li><a href="/news/news.html">News</a></li>
+          <li><a href="/blogs/blogs.html">Blogs</a></li>
+          <li><a href="/tools/tools.html">Tools</a></li>
+        </ul>
+      </nav>
+      <button class="dark-toggle" onclick="toggleDarkMode()">🌓</button>
+    </div>
+  </header>
 
   <div class="tool-container">
     <div class="tool-box">
       <div class="title">Date Duration Calculator</div>
       <div class="intro">Find out how many days are between two dates. Choose start and end date below.</div>
+      <div class="tool-description">
+        <strong>About Date Duration</strong>
+        <p>
+          Calculate the number of days, weeks, months, or years between two dates with this free <b>Date Duration</b> calculator. Perfect for planning, scheduling, or tracking time between events.
+        </p>
+      </div>
+      <div class="tool-howto">
+        <strong>How to Use:</strong>
+        <ul>
+          <li>Select the start and end dates.</li>
+          <li>Optionally, include the end date in the calculation.</li>
+          <li>See the total duration in days, weeks, and years instantly below.</li>
+        </ul>
+      </div>
 
       <div>
         <input type="date" id="startDate" />
