added images and amazon links

--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -81,39 +81,39 @@
             <ul class="product-list">
               <li class="product-item">
                 <div class="product-row">
-                  <img src="/assets/img/product1.jpg" alt="Eco-Friendly Water Bottle" class="product-img">
+                  <img src="/assets/img/amazon/eco-friendly-bottle.jpg" alt="Eco-Friendly Water Bottle" class="product-img">
                   <div class="product-info">
                     <h4 class="product-title">Eco-Friendly Water Bottle</h4>
                     <p class="product-desc">Stay hydrated and reduce plastic waste with this reusable, BPA-free water
-                      bottle. Perfect for travel, gym, and daily use.</p>
+                      bottle. Perfect for travel, gym, and daily use.(Affiliate Link)</p>
                     <div class="blogs-btn-wrapper">
-                      <a href="https://www.amazon.com/dp/example1" class="btn" target="_blank">View on Amazon</a>
+                      <a href="https://amzn.to/41209bo" class="btn" target="_blank">View on Amazon</a>
                     </div>
                   </div>
                 </div>
               </li>
               <li class="product-item">
                 <div class="product-row">
-                  <img src="/assets/img/product2.jpg" alt="Organic Cotton Tote Bag" class="product-img">
+                  <img src="/assets/img/amazon/tote-bag.jpg" alt="Organic Cotton Tote Bag" class="product-img">
                   <div class="product-info">
                     <h4 class="product-title">Organic Cotton Tote Bag</h4>
                     <p class="product-desc">A stylish and sustainable alternative to plastic bags. Great for shopping,
-                      work, or a day out.</p>
+                      work, or a day out.(Affiliate Link)</p>
                     <div class="blogs-btn-wrapper">
-                      <a href="https://www.amazon.com/dp/example2" class="btn" target="_blank">View on Amazon</a>
+                      <a href="https://amzn.to/4kHMIo9" class="btn" target="_blank">View on Amazon</a>
                     </div>
                   </div>
                 </div>
               </li>
               <li class="product-item">
                 <div class="product-row">
-                  <img src="/assets/img/product3.jpg" alt="Solar Power Bank" class="product-img">
+                  <img src="/assets/img/amazon/solar-power-bank.jpg" alt="Solar Power Bank" class="product-img">
                   <div class="product-info">
                     <h4 class="product-title">Solar Power Bank</h4>
                     <p class="product-desc">Charge your devices on the go with clean solar energy. Ideal for outdoor
-                      adventures and emergencies.</p>
+                      adventures and emergencies.(Affiliate Link)</p>
                     <div class="blogs-btn-wrapper">
-                      <a href="https://www.amazon.com/dp/example3" class="btn" target="_blank">View on Amazon</a>
+                      <a href="https://amzn.to/3TP12QW" class="btn" target="_blank">View on Amazon</a>
                     </div>
                   </div>
                 </div>
@@ -125,39 +125,39 @@
             <ul class="product-list">
               <li class="product-item">
                 <div class="product-row">
-                  <img src="/assets/img/product1.jpg" alt="Eco-Friendly Water Bottle" class="product-img">
+                  <img src="/assets/img/amazon/eco-friendly-bottle.jpg" alt="Eco-Friendly Water Bottle" class="product-img">
                   <div class="product-info">
                     <h4 class="product-title">Eco-Friendly Water Bottle</h4>
                     <p class="product-desc">Stay hydrated and reduce plastic waste with this reusable, BPA-free water
-                      bottle. Perfect for travel, gym, and daily use.</p>
+                      bottle. Perfect for travel, gym, and daily use.(Affiliate Link)</p>
                     <div class="blogs-btn-wrapper">
-                      <a href="https://www.amazon.com/dp/example1" class="btn" target="_blank">View on Amazon</a>
+                      <a href="https://amzn.to/41209bo" class="btn" target="_blank">View on Amazon</a>
                     </div>
                   </div>
                 </div>
               </li>
               <li class="product-item">
                 <div class="product-row">
-                  <img src="/assets/img/product2.jpg" alt="Organic Cotton Tote Bag" class="product-img">
+                  <img src="/assets/img/amazon/tote-bag.jpg" alt="Organic Cotton Tote Bag" class="product-img">
                   <div class="product-info">
                     <h4 class="product-title">Organic Cotton Tote Bag</h4>
                     <p class="product-desc">A stylish and sustainable alternative to plastic bags. Great for shopping,
-                      work, or a day out.</p>
+                      work, or a day out.(Affiliate Link)</p>
                     <div class="blogs-btn-wrapper">
-                      <a href="https://www.amazon.com/dp/example2" class="btn" target="_blank">View on Amazon</a>
+                      <a href="https://amzn.to/4kHMIo9" class="btn" target="_blank">View on Amazon</a>
                     </div>
                   </div>
                 </div>
               </li>
               <li class="product-item">
                 <div class="product-row">
-                  <img src="/assets/img/product3.jpg" alt="Solar Power Bank" class="product-img">
+                  <img src="/assets/img/amazon/solar-power-bank.jpg" alt="Solar Power Bank" class="product-img">
                   <div class="product-info">
                     <h4 class="product-title">Solar Power Bank</h4>
                     <p class="product-desc">Charge your devices on the go with clean solar energy. Ideal for outdoor
-                      adventures and emergencies.</p>
+                      adventures and emergencies.(Affiliate Link)</p>
                     <div class="blogs-btn-wrapper">
-                      <a href="https://www.amazon.com/dp/example3" class="btn" target="_blank">View on Amazon</a>
+                      <a href="https://amzn.to/3TP12QW" class="btn" target="_blank">View on Amazon</a>
                     </div>
                   </div>
                 </div>
