--- a/blogs/amazon/amaz.html
+++ b/blogs/amazon/amaz.html
@@ -41,15 +41,15 @@
           <p class="blogs-amazon-subheading">New & Worthy</p>
           <div style="margin-top:0.5em; display: flex; flex-wrap: wrap; gap: 1em; justify-content: flex-start;">
             <div class="howto-card color1">
-              <a href="https://www.amazon.com/dp/example1" target="_blank">
+              <a href="https://amzn.to/41209bo" target="_blank">
                 <h4>Eco-Friendly Water Bottle</h4>
-                <p>Stay hydrated and reduce plastic waste with this reusable, BPA-free water bottle.</p>
+                <p>Stay hydrated and reduce plastic waste with this reusable, BPA-free water bottle.(Affiliate Link)</p>
               </a>
             </div>
             <div class="howto-card color2">
-              <a href="https://www.amazon.com/dp/example2" target="_blank">
+              <a href="https://amzn.to/4kHMIo9" target="_blank">
                 <h4>Organic Cotton Tote Bag</h4>
-                <p>A stylish and sustainable alternative to plastic bags. Great for shopping, work, or a day out.</p>
+                <p>A stylish and sustainable alternative to plastic bags. Great for shopping, work, or a day out.(Affiliate Link)</p>
               </a>
             </div>
           </div>
@@ -58,9 +58,9 @@
           <p class="howto-tab-title blogs-amazon-subheading">Eco-Friendly</p>
           <div style="margin-top:0.5em; display: flex; flex-wrap: wrap; gap: 1em; justify-content: flex-start;">
             <div class="howto-card color3">
-              <a href="https://www.amazon.com/dp/example3" target="_blank">
+              <a href="https://amzn.to/3TP12QW" target="_blank">
                 <h4>Solar Power Bank</h4>
-                <p>Charge your devices on the go with clean solar energy. Ideal for outdoor adventures and emergencies.</p>
+                <p>Charge your devices on the go with clean solar energy. Ideal for outdoor adventures and emergencies.(Affiliate Link)</p>
               </a>
             </div>
           </div>
@@ -69,9 +69,9 @@
           <p class="howto-tab-title blogs-amazon-subheading">Gadgets</p>
           <div style="margin-top:0.5em; display: flex; flex-wrap: wrap; gap: 1em; justify-content: flex-start;">
             <div class="howto-card color4">
-              <a href="https://www.amazon.com/dp/example4" target="_blank">
+              <a href="https://amzn.to/3GMntTW" target="_blank">
                 <h4>Smart Home Plug</h4>
-                <p>Control your devices remotely and save energy with this Wi-Fi smart plug.</p>
+                <p>Control your devices remotely and save energy with this Wi-Fi smart plug.(Affiliate Link)</p>
               </a>
             </div>
           </div>
